<resources>
    <string name="app_name">校园交换平台</string>
    <!-- 登录页面文本 -->
    <string name="skip">跳过</string>
    <string name="login_title">校园交换平台</string>
    <string name="login_subtitle">二手交易 · 任务悬赏 · 校园互助</string>
    <string name="hint_email">邮箱</string>
    <string name="hint_password">密码</string>
    <string name="btn_login">登录</string>
    <string name="forgot_password">忘记密码</string>
    <string name="login_logo_description">应用Logo</string>

    <!-- 注册页面文本 -->
    <string name="register_logo_description">注册页面Logo</string>
    <string name="register_title">注册账号</string>
    <string name="register_subtitle">加入校园交换平台</string>
    <string name="hint_confirm_password">确认密码</string>
    <string name="btn_register">注册</string>
    <string name="back_to_login">返回登录</string>
    
    <!-- 密码找回页面 -->
    <string name="forgot_password_title">重置密码</string>
    <string name="reset_subtitle">找回一个密码</string>
    <string name="forgot_password_logo_description">重置密码页面Logo</string>
    <string name="hint_new_password">请输入新密码</string>
    <string name="hint_confirm_new_password">请确认新密码</string>
    <string name="btn_reset_password">重置</string>

    <!-- 验证码相关 -->
    <string name="hint_verification_code">请输入验证码</string>
    <string name="btn_get_code">验证码</string>

    <!-- 商品分类 -->
    <string-array name="product_categories">
        <item>数码产品</item>
        <item>图书教材</item>
        <item>服装鞋帽</item>
        <item>运动户外</item>
        <item>生活用品</item>
    </string-array>

    <!-- 任务分类 -->
    <string-array name="task_categories">
        <item>生活类</item>
        <item>学习类</item>
        <item>技能类</item>
        <item>其他</item>
    </string-array>
</resources>